# yellow_ketchapp

./: .gitignore  LICENSE  README.md  generate_proto.sh
client/pyside/: README.md  app.py
client/qtquick/: CMakeLists.txt  Main.cpp  Main.qml  README.md
client/qtwidget/: CMakeLists.txt  README.md  main.cpp
client_pyside/: README.md  app.py  requirements.txt
client_qt/: CMakeLists.txt  README.md  main.cpp
client_qtquick/: CMakeLists.txt  Main.cpp  Main.qml  README.md
client_qtwidget/: CMakeLists.txt  README.md  main.cpp
gui/: README.md  app.py  requirements.txt
proto/: helloworld.proto  imagestorage.proto
server/: README.md  go.mod  main.go
server/cpp/: CMakeLists.txt  README.md  main.cpp
server/go/: README.md
server/images/: README.md
server/qt/: CMakeLists.txt  README.md  main.cpp
